# fiscal

./: .gitignore  AVANCE-CAPA-COMERCIAL-2026-07-13.md  DECISIONES-PRODUCTO-2026-07-13.md  PLAN-MAESTRO.md  README.md  package-lock.json  package.json  vercel.json
dte-engine/: .env.example  .gitignore  README.md  pyproject.toml
dte-engine/comparison/: baseline.json
dte-engine/docs/: AUDIT-2026-07-09.md  AUDIT-CRUZADA-LIBREDTE-2026-07-09-SOL.md  AUDITORIA-DONANTE-PLUSCONTABLE-2026-07-12.md  AUDITORIA-INTEGRAL-2026-07-11.md  COMPARACION-LIBREDTE-COMPLETO-2026-07-09.md  COMPARISON-GATES.md  COMPUERTA-LIBREDTE-2026-07-11.md  CONTRATO-INTEGRACION-COMPLETO.md  COSECHA-LEGACY-SII-2026-07-11.md  DECISIONS.md  FUTURE-QA-POLICE.md  GATE-BOLETAS-39-41-2026-07-09.md  GATE-FACTURAS-33-34-2026-07-10.md  H3-NOTAS-Y-GUIAS-BASELINE-2026-07-10.md  H4-RECEPCION-BASELINE-2026-07-10.md  H5-OPERACION-BASELINE-2026-07-11.md  OFFICIAL-SOURCES.md  OFFLINE-READINESS-2026-07-11.md  READINESS-CERTIFICACION-2026-07-09.md  RUNBOOK-CERTIFICACION-BOLETAS-24H.md  RUNBOOK-CERTIFICACION-BOLETAS.md
dte-engine/postgres/: README.md
dte-engine/scripts/: check_reference_baseline.py  export_openapi.py  run_demo_api.py
dte-engine/tests/: factories.py  test_accountant_package.py  test_api.py  test_api_bootstrap.py  test_api_security.py  test_backup_restore.py  test_boleta.py  test_boleta_batch_coordinator.py  test_boleta_envelope_worker.py  test_boleta_exenta.py  test_caf.py  test_caf_authenticity.py  test_certificate.py  test_certification_dry_run.py  test_certification_evidence.py  test_correction_dte.py  (+61 more)
(+238 files in other folders)
